--- a/MassEngineProcessor/pom.xml
+++ b/MassEngineProcessor/pom.xml
@@ -30,7 +30,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<executable>true</executable>
+					<mainClass>${start-class}</mainClass>
+					<finalName>${finalName}.${project.version}</finalName>
+					<executable>true</executable>					
 				</configuration>
 			</plugin>
 			<plugin>
