--- a/MassEngineProcessor/pom.xml
+++ b/MassEngineProcessor/pom.xml
@@ -31,8 +31,8 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<mainClass>${start-class}</mainClass>
-					<finalName>${finalName}.${project.version}</finalName>
-					<executable>true</executable>					
+					<finalName>${finalName}</finalName>
+					<executable>true</executable>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -53,26 +53,67 @@
 					<clearOutputDir>false</clearOutputDir>
 				</configuration>
 			</plugin>
-			<!-- <plugin>
-				<groupId>org.jvnet.jaxb2.maven2</groupId>
-				<artifactId>maven-jaxb2-plugin</artifactId>
-				<version>0.13.2</version>
+			<!-- <plugin> <groupId>org.jvnet.jaxb2.maven2</groupId> <artifactId>maven-jaxb2-plugin</artifactId> 
+				<version>0.13.2</version> <executions> <execution> <goals> <goal>generate</goal> 
+				</goals> </execution> </executions> <configuration> <generatePackage>com.fl.massengineprocessor.ws.skeleton</generatePackage> 
+				<generateDirectory>${project.basedir}/src/main/java/</generateDirectory> 
+				<schemaDirectory>${project.basedir}/wsdl</schemaDirectory> <schemaIncludes> 
+				<include>*.wsdl</include> </schemaIncludes> </configuration> </plugin> -->
+
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<configuration>
+					<filesets>
+						<fileset>
+							<directory>logs</directory>
+							<includes>
+								<include>**/*.log</include>
+							</includes>
+						</fileset>
+						<fileset>
+							<directory>files</directory>
+							<includes>
+								<include>**/*.in</include>
+								<include>**/*.out</include>
+							</includes>
+						</fileset>
+					</filesets>
+				</configuration>
 				<executions>
 					<execution>
+						<id>default-clean</id>
+						<phase>clean</phase>
 						<goals>
-							<goal>generate</goal>
-						</goals>						
+							<goal>clean</goal>
+						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
 				<configuration>
-					<generatePackage>com.fl.massengineprocessor.ws.skeleton</generatePackage>
-					<generateDirectory>${project.basedir}/src/main/java/</generateDirectory>
-					<schemaDirectory>${project.basedir}/wsdl</schemaDirectory>
-					<schemaIncludes>
-						<include>*.wsdl</include>
-					</schemaIncludes>
-				</configuration> 
-			</plugin>-->
+					<finalName>${finalName}</finalName>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<finalName>${finalName}-${project.version}</finalName>
+					<appendAssemblyId>false</appendAssemblyId>
+					<descriptors>
+						<descriptor>src/assembly/assembly.xml</descriptor>
+					</descriptors>
+				</configuration>
+				<executions>
+					<execution>
+						<id>create-archive</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 
 		</plugins>
 	</build>
@@ -144,6 +185,11 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>12.1.0.1</version>
+		</dependency>
 
 	</dependencies>
 </project>
