--- a/MassEngineProcessor/src/main/resources/postgmdprocessor.daily.properties
+++ b/MassEngineProcessor/src/main/resources/postgmdprocessor.daily.properties
@@ -5,14 +5,15 @@ spring.datasource.url=jdbc:oracle:thin:@${DB_SERVER}:${DB_SERVER_PORT}:${DB_SID}
 spring.datasource.username=SPERTO
 spring.datasource.password=11Mars1996.
 
-logging.file = logs/MassEngineProcessor.log
+logging.file = logs/DailyPostGmdProcessor.log
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
 logging.level.com.fl.massengineprocessor=DEBUG
+logging.level.com.fl.postgmdprocessor=DEBUG
 
-input.thread.sleep.time=1000
+input.thread.sleep.time=10000
 output.thread.sleep.time=10000
-pool.sleep.time=3000
+pool.sleep.time=1000
 thread.sleep.time=1000
 #thread.sleep.time*thread.shutdown.counter = time in milliseconds after Thread is shutdowned
 thread.shutdown.counter=10
