--- a/MassEngineProcessor/src/main/resources/postgmdprocessor.ongoing.properties
+++ b/MassEngineProcessor/src/main/resources/postgmdprocessor.ongoing.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@${DB_SERVER}:${DB_SERVER_PORT}:${DB_SID}
+spring.datasource.url=jdbc:oracle:thin:@${SOISRV_DATABASE_SERVER}:${SOISRV_DATABASE_PORT}:${ORACLE_SID}
 spring.datasource.username=SPERTO
 spring.datasource.password=11Mars1996.
 
