--- a/MassEngineProcessor/src/main/resources/massengineprocessor.properties
+++ b/MassEngineProcessor/src/main/resources/massengineprocessor.properties
@@ -1,7 +1,7 @@
 server.port = 19090
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@${SOISRV_DATABASE_SERVER}:${SOISRV_DATABASE_PORT}:${ORACLE_SID}
+spring.datasource.url=jdbc:oracle:thin:@${DATABASE_SERVER}:${DATABASE_PORT}:${SID}
 spring.datasource.username=SPERTO
 spring.datasource.password=11Mars1996.
 
@@ -9,7 +9,6 @@ logging.file = logs/MassEngineProcessor.log
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
 logging.level.com.fl.massengineprocessor=DEBUG
-logging.level.com.fl.postgmdprocessor=DEBUG
 
 input.thread.sleep.time=10000
 output.thread.sleep.time=10000
