--- a/MassEngineProcessor/src/main/resources/postgmdprocessor.ongoing.properties
+++ b/MassEngineProcessor/src/main/resources/postgmdprocessor.ongoing.properties
@@ -1,12 +1,10 @@
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@${SOISRV_DATABASE_SERVER}:${SOISRV_DATABASE_PORT}:${ORACLE_SID}
+spring.datasource.url=jdbc:oracle:thin:${DATABASE_SERVER}:${DATABASE_PORT}:${SID}
 spring.datasource.username=SPERTO
 spring.datasource.password=11Mars1996.
 
 logging.file = logs/OnGoingPostGmdProcessor.log
-logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
-logging.level.com.fl.massengineprocessor=DEBUG
 logging.level.com.fl.postgmdprocessor=DEBUG
 
 input.thread.sleep.time=10000
