--- a/MassEngineProcessor/src/main/resources/massengineprocessor.properties
+++ b/MassEngineProcessor/src/main/resources/massengineprocessor.properties
@@ -1,7 +1,7 @@
 server.port = 19090
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@${DATABASE_SERVER}:${DATABASE_PORT}:${SID}
+spring.datasource.url=jdbc:oracle:thin:@${DATABASE_SERVER}:${DATABASE_PORT}:${ORACLE_SID}
 spring.datasource.username=SPERTO
 spring.datasource.password=11Mars1996.
 
@@ -15,7 +15,7 @@ output.thread.sleep.time=10000
 pool.sleep.time=1000
 thread.sleep.time=1000
 #thread.sleep.time*thread.shutdown.counter = time in milliseconds after Thread is shutdowned
-thread.shutdown.counter=10
+thread.shutdown.counter=20
 
 pool.size.max.value=20
 
