--- a/MassEngineProcessor/src/main/resources/postgmdprocessor.ongoing.properties
+++ b/MassEngineProcessor/src/main/resources/postgmdprocessor.ongoing.properties
@@ -1,18 +1,18 @@
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:${DATABASE_SERVER}:${DATABASE_PORT}:${SID}
+spring.datasource.url=jdbc:oracle:thin:@${DATABASE_SERVER}:${DATABASE_PORT}:${ORACLE_SID}
 spring.datasource.username=SPERTO
 spring.datasource.password=11Mars1996.
 
 logging.file = logs/OnGoingPostGmdProcessor.log
 logging.level.org.hibernate=ERROR
-logging.level.com.fl.postgmdprocessor=DEBUG
+logging.level.com.fl.postgmdprocessor=INFO
 
 input.thread.sleep.time=10000
 output.thread.sleep.time=10000
 pool.sleep.time=1000
 thread.sleep.time=1000
 #thread.sleep.time*thread.shutdown.counter = time in milliseconds after Thread is shutdowned
-thread.shutdown.counter=10
+thread.shutdown.counter=20
 
 pool.size.max.value=20
 
