--- a/MassEngineProcessor/pom.xml
+++ b/MassEngineProcessor/pom.xml
@@ -57,7 +57,7 @@
 				<version>0.13.2</version> <executions> <execution> <goals> <goal>generate</goal> 
 				</goals> </execution> </executions> <configuration> <generatePackage>com.fl.massengineprocessor.ws.skeleton</generatePackage> 
 				<generateDirectory>${project.basedir}/src/main/java/</generateDirectory> 
-				<schemaDirectory>${project.basedir}/wsdl</schemaDirectory> <schemaIncludes> 
+				<schemaDirectory>${project.basedir}/wsdl/MassEngineProcessor</schemaDirectory> <schemaIncludes> 
 				<include>*.wsdl</include> </schemaIncludes> </configuration> </plugin> -->
 
 			<plugin>
