--- a/MassEngineProcessor/src/main/resources/postgmdprocessor.daily.properties
+++ b/MassEngineProcessor/src/main/resources/postgmdprocessor.daily.properties
@@ -1,7 +1,10 @@
+spring.main.web-environment=false
+
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@${DATABASE_SERVER}:${DATABASE_PORT}:${ORACLE_SID}
 spring.datasource.username=SPERTO
 spring.datasource.password=11Mars1996.
+spring.datasource.maxActive=20
 
 logging.file = logs/DailyPostGmdProcessor.log
 logging.level.org.hibernate=ERROR
