--- a/MassEngineProcessor/pom.xml
+++ b/MassEngineProcessor/pom.xml
@@ -53,13 +53,26 @@
 					<clearOutputDir>false</clearOutputDir>
 				</configuration>
 			</plugin>
-			<!-- <plugin> <groupId>org.jvnet.jaxb2.maven2</groupId> <artifactId>maven-jaxb2-plugin</artifactId> 
-				<version>0.13.2</version> <executions> <execution> <goals> <goal>generate</goal> 
-				</goals> </execution> </executions> <configuration> <generatePackage>com.fl.massengineprocessor.ws.skeleton</generatePackage> 
-				<generateDirectory>${project.basedir}/src/main/java/</generateDirectory> 
-				<schemaDirectory>${project.basedir}/wsdl/MassEngineProcessor</schemaDirectory> <schemaIncludes> 
-				<include>*.wsdl</include> </schemaIncludes> </configuration> </plugin> -->
-
+			<plugin>
+				<groupId>org.jvnet.jaxb2.maven2</groupId>
+				<artifactId>maven-jaxb2-plugin</artifactId>
+				<version>0.13.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<generatePackage>com.fl.massengineprocessor.ws.skeleton</generatePackage>
+					<generateDirectory>${project.basedir}/src/main/java/</generateDirectory>
+					<schemaDirectory>${project.basedir}/wsdl/MassEngineProcessor</schemaDirectory>
+					<schemaIncludes>
+						<include>*.wsdl</include>
+					</schemaIncludes>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-clean-plugin</artifactId>
 				<configuration>
