--- a/MassEngineProcessor/src/main/resources/postgmdprocessor.daily.debug.properties
+++ b/MassEngineProcessor/src/main/resources/postgmdprocessor.daily.debug.properties
@@ -4,20 +4,21 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@${DATABASE_SERVER}:${DATABASE_PORT}:${ORACLE_SID}
 spring.datasource.username=SPERTO
 spring.datasource.password=11Mars1996.
-spring.datasource.maxActive=20
+spring.datasource.maxActive=10
 
-logging.file = logs/OnGoingPostGmdProcessor.log
+logging.file = logs/DailyPostGmdProcessor.log
 logging.level.org.hibernate=ERROR
-logging.level.com.fl.postgmdprocessor=INFO
+logging.level.com.fl.postgmdprocessor=DEBUG
+logging.level.com.fl.engineprocessor=DEBUG
 
 input.thread.sleep.time=10000
 output.thread.sleep.time=10000
-pool.sleep.time=1000
-thread.sleep.time=1000
+pool.sleep.time=100
+thread.sleep.time=100
 #thread.sleep.time*thread.shutdown.counter = time in milliseconds after Thread is shutdowned
 thread.shutdown.counter=20
 
-pool.size.max.value=20
+pool.size.max.value=10
 
 #thread.init.on.startup=true
 
