Commit Daily Perf

--- a/MassEngineProcessor/src/main/resources/massengineprocessor.properties
+++ b/MassEngineProcessor/src/main/resources/massengineprocessor.properties
@@ -8,16 +8,17 @@ spring.datasource.password=11Mars1996.
 logging.file = logs/MassEngineProcessor.log
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
-logging.level.com.fl.massengineprocessor=DEBUG
+logging.level.com.fl.engineprocessor=${LOG_LEVEL}
+logging.level.com.fl.massengineprocessor={LOG_LEVEL}
 
 input.thread.sleep.time=10000
 output.thread.sleep.time=10000
-pool.sleep.time=1000
-thread.sleep.time=1000
+pool.sleep.time=10
+thread.sleep.time=10
 #thread.sleep.time*thread.shutdown.counter = time in milliseconds after Thread is shutdowned
-thread.shutdown.counter=20
+thread.shutdown.counter=2000
 
-pool.size.max.value=20
+pool.size.max.value=30
 
 #thread.init.on.startup=true
 
