--- a/MassEngineProcessor/src/main/resources/postgmdprocessor.daily.properties
+++ b/MassEngineProcessor/src/main/resources/postgmdprocessor.daily.properties
@@ -4,14 +4,13 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@${DATABASE_SERVER}:${DATABASE_PORT}:${ORACLE_SID}
 spring.datasource.username=SPERTO
 spring.datasource.password=11Mars1996.
-spring.datasource.maxActive=10
 
-logging.file = logs/OnGoingPostGmdProcessor.log
+logging.file = logs/DailyPostGmdProcessor.log
 logging.level.org.hibernate=ERROR
-logging.level.com.fl.postgmdprocessor=INFO
-logging.level.com.fl.engineprocessor=INFO
+logging.level.com.fl.postgmdprocessor=${LOG_LEVEL}
+logging.level.com.fl.engineprocessor=${LOG_LEVEL}
 
-input.thread.sleep.time=5000
+input.thread.sleep.time=2000
 output.thread.sleep.time=5000
 pool.sleep.time=10
 thread.sleep.time=10
