--- a/MassEngineProcessor/src/main/resources/postgmdprocessor.ongoing.properties
+++ b/MassEngineProcessor/src/main/resources/postgmdprocessor.ongoing.properties
@@ -4,15 +4,14 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@${DATABASE_SERVER}:${DATABASE_PORT}:${ORACLE_SID}
 spring.datasource.username=SPERTO
 spring.datasource.password=11Mars1996.
-spring.datasource.maxActive=10
 
-logging.file = logs/DailyPostGmdProcessor.log
+logging.file = logs/OnGoingPostGmdProcessor.log
 logging.level.org.hibernate=ERROR
-logging.level.com.fl.postgmdprocessor=DEBUG
-logging.level.com.fl.engineprocessor=DEBUG
+logging.level.com.fl.postgmdprocessor=${LOG_LEVEL}
+logging.level.com.fl.engineprocessor=${LOG_LEVEL}
 
-input.thread.sleep.time=5000
-output.thread.sleep.time=5000
+input.thread.sleep.time=60000
+output.thread.sleep.time=60000
 pool.sleep.time=10
 thread.sleep.time=10
 #thread.sleep.time*thread.shutdown.counter = time in milliseconds after Thread is shutdowned
