--- a/MassEngineProcessor/pom.xml
+++ b/MassEngineProcessor/pom.xml
@@ -349,7 +349,8 @@
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
-			<version>12.1.0.1</version>
+			<version>11.2.0.3</version>
+			<!-- <version>12.1.0.1</version> -->
 		</dependency>
 
 	</dependencies>
