--- a/MassEngineProcessor/pom.xml
+++ b/MassEngineProcessor/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -54,10 +55,11 @@
 							<executable>true</executable>
 						</configuration>
 					</plugin>
+
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>jaxb2-maven-plugin</artifactId>
-						<version>1.6</version>
+						<version>2.4</version>
 						<executions>
 							<execution>
 								<id>xjc</id>
@@ -67,11 +69,12 @@
 							</execution>
 						</executions>
 						<configuration>
-							<schemaDirectory>${project.basedir}/src/main/resources/</schemaDirectory>
+							<schemaDirectory>${project.basedir}/src/main/xsd/</schemaDirectory>
 							<outputDirectory>${project.basedir}/src/main/java</outputDirectory>
 							<clearOutputDir>false</clearOutputDir>
 						</configuration>
 					</plugin>
+
 					<plugin>
 						<groupId>org.jvnet.jaxb2.maven2</groupId>
 						<artifactId>maven-jaxb2-plugin</artifactId>
@@ -233,7 +236,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.7</java.version>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<maven.compiler.target>1.7</maven.compiler.target>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 	</properties>
 
@@ -345,6 +348,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.oracle</groupId>
